crates/cribo/tests/snapshots/requirements@xfail_bundle_third_party_metadata_use_before_reimport.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_metadata_use_before_reimport/main.py
---
packages:
  - provider
count: 1
