crates/cribo/tests/snapshots/requirements@xfail_bundle_third_party_module_class.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_module_class/main.py
---
packages:
  - classy-pkg
count: 1
