crates/cribo/tests/snapshots/requirements@xfail_bundle_third_party_module_map_constraint_merge.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_module_map_constraint_merge/main.py
---
packages:
  - "external-dep>=1,<2"
count: 1
