crates/cribo/tests/snapshots/requirements@xfail_bundle_third_party_module_map_dependency.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_module_map_dependency/main.py
---
packages:
  - dep-pkg
  - mapped-pkg>=2
count: 2
