crates/cribo/tests/snapshots/requirements@xfail_bundle_third_party_moduletype_check.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_moduletype_check/main.py
---
packages:
  - typed-pkg
count: 1
