crates/cribo/tests/snapshots/requirements@xfail_bundle_third_party_moduletype_identity.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_moduletype_identity/main.py
---
packages:
  - identity-checked-pkg
count: 1
