crates/cribo/tests/snapshots/requirements@xfail_bundle_third_party_namespace_deferred_to_regular.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_namespace_deferred_to_regular/main.py
---
packages:
  - duo
count: 1
