crates/cribo/tests/snapshots/requirements@xfail_bundle_third_party_namespace_split.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_namespace_split/main.py
---
packages:
  - plugin-b
count: 1
