crates/cribo/tests/snapshots/requirements@xfail_bundle_third_party_oneline_annotation.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_oneline_annotation/main.py
---
packages:
  - oneline-ann-pkg
count: 1
