crates/cribo/tests/snapshots/requirements@xfail_bundle_third_party_orphaned_dependency.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_orphaned_dependency/main.py
---
packages:
  - parent-pkg
count: 1
